objects/nXBI__Business_Credit_Business_Information__c.object
<CustomObject>
    <fields>
        <fullName>nXBI__Business_Credit_Report__c</fullName>
        <label>Business Credit Report</label>
        <referenceTo>nXBI__Business_Credit_Report__c</referenceTo>
        <relationshipName>Business_Information</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nXBI__Business_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>nXBI__SIC_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Code</label>
        <length>38</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__SIC_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Street__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nXBI__Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Business Credit Business Information</label>
    <nameField>
        <displayFormat>BI-{00000000}</displayFormat>
        <label>Business Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Credit Business Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>